<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SRI-Car</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My message</string>
    <string name="title_activity_bluetooth_panel">Bluetooth Connection</string>
    <string name="bluetooth_status">Bluetooth:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="unavailable">Unavailable</string>
    <string name="checking">Checking…</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="bt_not_enabled_leaving">Bluetooth off. Exit!</string>
    <string name="restart_descovering">Restart descovering</string>
    <string name="devices">Devices</string>
    <string name="bt_service_status">Bluetooth Service:</string>
    <string name="not_connected">Not connected</string>
    <string name="connecting">Connecting…</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="starting">Starting…</string>
    <string name="descovering">Descovering</string>

    <string-array name="sendAsTypes">
        <item>Char</item>
        <item>Int(&lt;256)</item>
    </string-array>

    <string name="title_activity_go_activity1">Remote Control</string>
    <string name="title_activity_go_activity2">goActivity2</string>
    <string name="title_activity_received_messages">Logs and Messages</string>
    <string name="title_activity_ms2">MS2Activity</string>
    <string name="title_activity_remote_control_activity">Remote Control</string>
    <string name="title_activity_car_commands">CarCommands</string>
    <string name="title_activity_car_settings">CarSettings</string>
    <string name="title_activity_car_info">CarInfoActivity</string>
    <string name="title_activity_parking_area">ParkingAreaActivity</string>

</resources>
