<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tdr.bugcar_v1.Activities.BluetoothPanelActivity"
    android:weightSum="1.0"
    >

    <TextView android:text="@string/bluetooth_status"
        android:layout_height="wrap_content"
        android:layout_width="2050dp"
        android:id="@+id/textView3"

        android:padding="3dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:gravity="end"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView android:text="@string/checking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetoothStatusTxt"
        android:padding="3dp"
        android:background="@color/aGray"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:gravity="end"/>


    <TextView
        android:text="@string/bt_service_status"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        android:padding="7dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:gravity="end"/>

    <TextView
        android:text="@string/checking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btServiceStatusTxt"
        android:padding="7dp"
        android:background="@drawable/shape"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:onClick="disconnectBTServiceIfConnected"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/btDevicesListView"
        android:background="@drawable/shape"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/restartDiscoveryBtn"
        android:layout_below="@+id/textView4" />



    <TextView
        android:text="@string/devices"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView4"
        android:padding="7dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_descovering"
        android:id="@+id/restartDiscoveryBtn"
        android:onClick="doDiscovery"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/discoveringPB"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:gravity="start"
        android:layout_above="@+id/btDevicesListView"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />
</RelativeLayout>
